Fixes links not wrapping in UserLinks.

--- a/components/UserLinks/UserLinks.scss
+++ b/components/UserLinks/UserLinks.scss
@@ -1,4 +1,6 @@
 .user-links {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+    max-width: 100%;
 }
